# testing

./: CMakeLists.txt  README.md  buildme.sh  main.cu  sbgemv_cu.cpp  sbgemv_roc.cpp  shared.cuh
cmake-modules/: FindPETSc.cmake
